[MIRO Pivot] Fix overflow issue with view selection button

--- a/src/less/8_miro/miro.less
+++ b/src/less/8_miro/miro.less
@@ -2434,6 +2434,12 @@ li.drop-index-item[data-col-hidden="true"] {
   display: flex;
 }
 
+.btn-view-dropdown {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .view-dropdown-wrapper {
   max-height: 400px;
   overflow: auto;
